# 00082217Laboratorio7

codigo/: CMakeLists.txt  classes.h  sel.h  tools.h
problem type/: 00082217.bat  00082217.prb
